# ETL-Pipeline-Winter-Weat-Condition

./: Readme.md  params.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: cww-sd_cleaned_data_07022026.csv  cww-sd_raw_data_07022026.csv
src/: My_logger.py  Pipeline.py  analysis.py
