[project]
name = "etl-wwc"
version = "0.1.0"
description = "ETL pipeline for winter wheat condition"
authors = [
    {name = "Aminata A. BA",email = "84561048+AminataAliouBa@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "datetime (>=6.0,<7.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
